css/main.css
/*
 * Copyright 2013 Gianfilippo Balestriero
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * 		http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * 
 */

html, body {
	width:100%;
	height:100%;
	background: #FFFFFF!important;
}

body {
	background: #FFFFFF;
	overflow-x: hidden;
}

#wrapper {
	width:100%;
	height:100%;
	min-height:100%;
}

header .logo {
	width:55px;
	margin-right:10px;
}

header li {
	margin-top:18px;
}

header li a {
	font-size:17px;
	transition: all 0.5s;
	-ms-transition: all 0.5s;
	-moz-transition: all 0.5s;
	-webkit-transition: all 0.5s;
}

.jumbotron {
	margin:0px;
}

.page {
	position:relative;
	width:100%;
	height:100%;
	min-height: 100%;	
}

.page .container {
	position:relative;
	z-index: 1;
	top:4%;
}

.page .overlay {
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;
	min-height:100%;
	background: rgba(0,0,0,0.85);
	z-index:0;
	
}

#home {
	background: url('../img/screen.png') right bottom fixed no-repeat white;
	background-size:60%;
	height:100%;
	min-height:100%;
}

#home .container {
	position:relative;
	z-index: 1;
	top:25%;
}

#home  h1, #home  h2, #home   h3, #home  h4{
	color:white;
}


#home h4 a {
	color:white;
}

#home .container .btn{
	margin-top:20px;
	margin-right:20px;
	vertical-align:middle;
}

#home .container a i {
	top:3px;
	margin-right:5px;
}

#home .container .col iframe {
	overflow:hidden;
	vertical-align: top;
}

#home .container .col {
	margin-left:-15px;
}

#home .IN-widget {
	vertical-align:top;
}

#example {
	margin:0px;
}

#example .container{
	width:100%;
	height:100%;
	min-height: 100%;
}

#example img {
	width:100%;
	margin-bottom:10px;
}

#start {
	margin:0px;
	height:auto;
	min-height:auto;
}

#start .container {
	top:14%;

}

#start h3 {
	margin-top:70px;
}

#start .thats {
	font-size:66px;
	padding:5% 0%;
}

footer {
	text-align:right;
	padding:5% 2%;
}

#enterin-wrapper,
#enterin-wrapper .enterin-slide
{
   width:100%;
   height:100%;
   min-height:100%;
}

#enterin-wrapper .enterin-slide.slide1 {
   background: url('../img/mac.png') center center no-repeat transparent;
   background-size: 100%;
}
#enterin-wrapper .enterin-slide.slide2 {
	background: url('../img/ipad.png') center center no-repeat transparent;
	background-size: 100%;
}
#enterin-wrapper .enterin-slide.slide3 {
	background: url('../img/iphone.png') center center no-repeat transparent;
	background-size: 90%;
}
#enterin-wrapper .enterin-slide.slide4 {
	background: url('../img/enterin-slide.png') center center no-repeat transparent;
	background-size: 60%;
}

#enterin-ctrl {
	position: absolute;
	top:14%;
	z-index:99999;
	width:500px;
}
#enterin-ctrl a{
	display:block;
	margin-bottom:20px;
	margin-left:15px;
	width:100px;
	text-transform:uppercase;
}


@media (min-width: 300px) and (max-width:700px) {
	#home {
		height:160%;
		min-height:160%;
	}
	#home .container{
		top:10%;
	}	
	#home .container .btn {
		width:100%;
	}
	#enterin-ctrl {
		position: absolute;
		top:15%;
		z-index:99999;
		width:auto;
	}	
	#enterin-ctrl a {
		display:inline-block;
		font-size:11px;
		width:60px;
		padding:0px;
		margin-right:-10px;
	}
}

@media (min-width: 1000px) and (max-width:1024px) {
	#home .container .btn {
		width:auto;
	}
	#home .container .col-lg-9{
		width:100%;
	}
	#home .container .col {
		width:150px;
		display:inline-block;
	}	
	#enterin-ctrl {
		position: absolute;
		top:10%;
		z-index:99999;
		width:auto;
	}
	#enterin-ctrl a {
		display:inline-block;
		font-size:11px;
		width:60px;
		padding:0px;
		margin-right:-10px;
	}
}

@media (min-width:768px) and (max-width:768px) and (min-height:1024px) and (max-height:1024px){
	#home .container .btn {
		width:auto;
	}
	#home .container .col-lg-9{
		width:100%;
	}
	#home .container .col {
		width:150px;
		display:inline-block;
	}
	#enterin-ctrl {
		position: absolute;
		top:10%;
		z-index:99999;
		width:auto;
	}
	#enterin-ctrl a {
		display:inline-block;
		font-size:11px;
		width:60px;
		padding:0px;
		margin-right:-10px;
	}	
}

@media (min-width:480px) and (max-width:480px) and (min-height:800px) and (max-height:800px){
	#home .container .col-lg-9{
		width:100%;
	}
	#home .container .col {
		width:130px;
		display:inline-block;
	}	
}

@media (min-width:800px) and (max-width:800px) and (min-height:480px) and (max-height:480px){
	#home .container .col-lg-9{
		width:100%;
	}
	#home .container .col {
		width:130px;
		display:inline-block;
	}	
	#example {
		padding-top:10%;
	}
	#enterin-ctrl {
		top:20%;
	}
	#enterin-ctrl a {
		font-size:11px;
		width:70px;
		padding:0px;
		margin-right:-10px;
	}		
}

